# room-of-devs

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
config/: config.json
docs/: codebase-review-2026-07-06.md  design-arcade-button-controller.md  design-avatar-lipsync.md  design-conversational-layer.md  design-multi-agent-v2-hermes.md  ideas-backlog.md  plan-details-phase1-2.md  plan-details-phase3-4.md  plan-room-of-devs.md  research-character-agents-vision.md  spec-avatar-expressions.md  spec-dock-polish-2.md  spec-live-mode-v2.md  spec-replay-attribution.md  spec-ui-refactor.md
panel/: package.json  pnpm-lock.yaml
panel/src-tauri/: Cargo.toml  tauri.conf.json
panel/src-tauri/capabilities/: default.json
panel/src-tauri/src/: lib.rs
plugins/: cursor-read-aloud.5s.sh
scripts/: announce.sh  cancel_inject.sh  clear_queue.sh  clear_session_queue.sh  clear_thread_queue.sh  fetch_credits.sh  gemini_process.py  generate_sfx.sh  grant_floor.sh  hold_room.sh  hook_ask_user.sh  hook_prompt.sh  hook_session_end.sh  hook_stop.sh  ingest.sh  ingest_claude_code.sh  inject_prompt.sh  nickname.sh  notify_queued.sh  panel.sh  play_latest.sh  play_node.sh  ptt.sh  replay.sh  restart.sh  set_listening.sh  set_mood.sh  set_playback_mode.sh  set_session_mute.sh  set_session_voice.sh  set_streaming.sh  set_voice.sh  setup.sh  stop.sh  team.sh  tts-server.sh  voice_ptt.sh
tts-server/: mobile.html  package.json  pnpm-lock.yaml  test-dnd.ts  test-panel-ws-buttons.ts  test-panel-ws-settings.ts  test-panel-ws.ts  test-stick.ts  test-triage.ts  (+1 more)
(+71 files in other folders)
